--- a/app/views/menus/teacher/_qz-main.html.haml
+++ b/app/views/menus/teacher/_qz-main.html.haml
@@ -6,6 +6,6 @@
     = simple_link for: 'New', id: 'lnk-new-quiz', icon: 'icon-plus-sign'
   %li
     = simple_link for: 'List', id: 'lnk-existing-quiz', icon: 'icon-list'
-  -# unless current_account.loggable.online
+  -# unless current_account.loggable.indie
     %li
       = simple_link for: 'Quick Trial', id: 'lnk-demo'
