--- a/app/views/teachers/_exb.html.haml
+++ b/app/views/teachers/_exb.html.haml
@@ -1,26 +1,26 @@
 -# Variable teacher comes from the layout file 
 
-- online_instructor = current_account.loggable.online
+- indie = current_account.loggable.indie
 
-%ul.nav.nav-tabs{ data: {'always-on' => "#{online_instructor}" } } 
+%ul.nav.nav-tabs{ data: {'always-on' => "#{indie}" } } 
   %li
     = simple_link for: "Quizzes", href: '#pane-exb-quizzes', id: 'tab-exb-quizzes'
-  - unless online_instructor
+  - unless indie
     %li
       = simple_link for: 'Assignments', href: '#pane-exb-existing', id: 'tab-exb-existing'
     %li
       = simple_link for: "Make New", href: '#pane-exb-sektions', id: 'tab-exb-sektions', class: 'nopurge-ever'
-  - if online_instructor
+  - if indie
     %li
       = simple_link for: "Courses", href: "#pane-online-courses", id: 'tab-online-courses'
 
 .tab-content
   #pane-exb-quizzes.tab-pane.scroll
-  - unless online_instructor
+  - unless indie
     #pane-exb-existing.tab-pane.scroll
     #pane-exb-sektions.tab-pane.scroll
       = render partial: 'teachers/exb-sektions', locals: { teacher: teacher }
-  - if online_instructor
+  - if indie
     #pane-online-courses.tab-pane.scroll
 
     
