--- a/app/views/teachers/shared/_edit-qz.html.haml
+++ b/app/views/teachers/shared/_edit-qz.html.haml
@@ -19,6 +19,6 @@
       #editqz-1.multi-select
 
   #pane-editqz-2.tab-pane
-    = render partial: 'teachers/qzb-topics', locals: { context: :editqz }
+    = render partial: 'teachers/shared/qzb-topics', locals: { context: :editqz }
   #pane-editqz-3.tab-pane
-    = render partial: 'teachers/form-qzb', locals: { context: :editqz }
+    = render partial: 'teachers/shared/form-qzb', locals: { context: :editqz }
