stashed to debug prod problems

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1403,7 +1403,7 @@ li.split {
 } 
 
 
-#m-buy-credits, #m-refund-credits {
+#m-buy-credits, #m-refund-credits, #m-invoice {
 
   select {
     width: auto ;
