--- a/app/views/modals/customer/_invoice.html.haml
+++ b/app/views/modals/customer/_invoice.html.haml
@@ -1,18 +1,22 @@
-- rate_codes = RateCode.all
+- cost_codes = CostCode.all.select { |cc| cc.subscription == false }.map { |cc| [cc.description, cc.id] }
 
 #m-invoice.modal.regular.fade.row-fluid
   %ul.nav.nav-tabs.always-on
     %li#transfer
       %p.title= "Create Invoice"
 
-  = simple_form_for :invoice, :url => gen_invoice_path, :remote => true, 
+  = simple_form_for :invoice_for, :url => gen_invoice_path, :remote => true, 
     :defaults => { :required => false, :label => false }, :html => { :id => 'fm-gen-invoice' } do |f|
     .row-fluid
-      .span6
-        = f.input :amount, :placeholder => "Amount", :input_html => { :class => "input-mini" }
-        = f.select :currency, [["USD", "USD"], ["INR", "INR]]
-      .span6
-        = f.select :rate_code, rate_codes
+      .span4
+        = f.input :amount, :placeholder => "Amount", :input_html => { :class => 'input-mini' }
+      .span4
+        = f.input :quantity, :placeholder => "Qty", :input_html => { :class => 'input-mini' }
+      .span4
+        = f.select :currency, [["USD", "USD"], ["INR", "INR"]]
+    .row-fluid
+      = f.select :cost_code, cost_codes
+    %input.hide{ :type => :string, :data => { :validate => false }, :id => 'customer_id', :name => 'invoice_for[customer_id]' }
     #message.alert.alert-error.hide
-    %button.btn.btn-large.btn-primary.push-down.pull-right{:type => :submit}= "Transfer"
+    %button.btn.btn-large.btn-primary.push-down.pull-right{:type => :submit}= "Generate"
 
