--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -748,6 +748,10 @@ button[data-toggle='button'] {
   background: transparent ;
 } 
 
+.semi-transparent { 
+  background-color: rgba(43,43,43,0.5) ;
+}
+
 #wait {
   height: 400px ;
   text-align: center ;
@@ -1025,13 +1029,34 @@ li.split {
   text-align: center ;
 } 
 
-.spinner {
+body > #spinner {
   position: fixed ;
-  top: 9% ;
+  top: 50% ;
   left: 50% ;
-  z-index: 6 ;
-  width: 24px ;
-  height: 26px ;
+  .text { 
+    font: {
+      size: 18px ;
+      variant: small-caps; 
+    }
+    text-align: center ;
+    margin-bottom: 5px ;
+  }
+
+  .subtext { 
+    font: {
+      size: 12px ;
+    }
+  }
+
+  background: rgba(19,19,19,0.9) ;
+  padding: 30px 10px ; 
+  min-width: 100px ;
+  max-width: 200px ;
+  border-radius: 10px ;
+  > .spinner { 
+    min-height: 30px ;
+    padding: 10px 0px 0px 0px ;
+  }
 }
 
 .container-fluid {
