Reorg'ed toolbox/grading
Examiners need to see all grading components whereas teachers and students
need to see a subset.

Hence, toolbox/grading now sorts components based on whether they appear
on the left or right side of the screen

Also, layout files for examiners and students re-written in the same
way as was done for teachers

--- a/app/views/toolbox/grading/left/_pending.html.haml
+++ b/app/views/toolbox/grading/left/_pending.html.haml
@@ -14,4 +14,4 @@
   #pane-grd-exams.tab-pane.purge-blind
   #pane-grd-questions.tab-pane.purge-blind
   #pane-grd-panel.tab-pane.static
-    = render partial: 'shared/grading/rubric'
+    = render partial: 'toolbox/grading/left/rubric'
