Set #wide to span7

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -72,7 +72,8 @@
 
       #desktop.row-fluid
         - layout.each do |pnl, child|
-          %div{ id: "#{pnl}", class: 'g-panel span4' }
+          - width = pnl != :wide ? 'span4' : 'span7'
+          %div{ id: "#{pnl}", class: "g-panel #{width}" }
             -# Add paginator 
             = render partial: 'toolbox/custom/paginator', locals: { id: "#{pnl}-paginator", url: '#' }
             -# Then, add the { left-, middle-, right-, wide- } as specified in layout
