Some more reorganiation of views/modals
Also, removing tutorials from teacher console. They are out of sync
and no one seems to see them anyway

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,8 +4,8 @@
   #toolbox.hidden 
     = render :partial => 'menus/user/abouts'
   #modals
-    = render :partial => 'modals/user/register'
-    = render :partial => 'modals/user/enrollment-confirm'
+    = render :partial => 'modals/guest/register'
+    = render :partial => 'modals/guest/enrollment-confirm'
     = render :partial => 'notifications/shared/old-browser'
   #notifications
     = render :partial => 'notifications/student/enrollment-blocked'
