--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -7,7 +7,7 @@
 - for j in [:toolbox, :menus, :modals, :notifications]
   - content_for j do 
     - klass = (j == :toolbox) ? 'hidden' : ''
-    -  m = (j == :toolbox) ? ['generic', 'preview'].map{ |a| "toolbox/#{a}" } : ['student','user'].map{ |a| "#{j}/#{a}" }
+    -  m = (j == :toolbox) ? ['generic', 'preview'].map{ |a| "toolbox/#{a}" } : ['student','shared'].map{ |a| "#{j}/#{a}" }
     - partials_f = m.map{ |b| "app/views/#{b}" }
     %div{ id: j, class: klass }
       - for f in partials_f
