Forgot to provision wide-X in teacher layout
wide-X is where previews are rendered. Its a fixed place and must be present
for preview to work

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -53,6 +53,7 @@
                right: [],
                wide: [ ['wait', 'toolbox/generic/wait'],
                        [4, 'teachers/uni/edit-sektion'],
+                       ['X', nil],
                        ['chart-1', nil],
                        ['chart-2', nil],
                        ['chart-3', nil] ] } 
