--- a/app/assets/stylesheets/indie/assets.css.scss
+++ b/app/assets/stylesheets/indie/assets.css.scss
@@ -10,7 +10,15 @@ body.dragging, body.dragging * {
 }
 
 .assets { 
-  > h4 { padding-bottom: 5px ; }
+  > h4 { 
+    padding: { top: 5px ; bottom: 5px ; }
+    border: 1px dotted white ;
+    border: {
+      top-left-radius: 8px ;
+      top-right-radius: 8px ;
+    }
+    font-weight: 300 ;
+  } 
   > ul { 
     min-height: 50px ;
     li {
