--- a/app/views/course/_assets.html.haml
+++ b/app/views/course/_assets.html.haml
@@ -2,16 +2,16 @@
 -# 'type' comes from the calling HAML
 
 .row-fluid.nopurge
-  .span8
+  .span9
     .small-text.white
-      Simply drag and drop from one set to the other. Then click 'Submit'
-  .span3
+      Drag and drop between sets or within a set to change order. Then, click 'Submit'
+  .span2
     = simple_button for: 'Submit', class: 'btn btn-primary pull-right'
 .row-fluid
   .span4.used.assets{ id: "#{type}-used" }
-    %h4.white.text-center= 'Used'
+    %h4.white.text-center= 'Being used'
     %ul.serialize
   .span7.available.assets{ id: "#{type}-available" }
-    %h4.white.text-center= 'Available'
+    %h4.white.text-center= 'Not being used'
     %ul.span5
     %ul.span5.offset1
