Passing :lessons instead of :lesson
The local variable passed has to match what :type key in
the RABL ( rendered by course/lessons ). And we have decided
to go with the plural form

--- a/app/views/course/_details.html.haml
+++ b/app/views/course/_details.html.haml
@@ -12,7 +12,7 @@
 .tab-content
   #pane-course-overview.tab-pane
   #pane-course-lessons.tab-pane
-    = render partial: 'course/assets', locals: { type: :lesson }
+    = render partial: 'course/assets', locals: { type: :lessons }
   #pane-course-quizzes.tab-pane
     = render partial: 'course/assets', locals: { type: :quizzes }
   #pane-course-stats.tab-pane
