Added ability to create a new lesson as a standalone asset
Once created, a lesson can then be attached or detached from a
course the same way quizzes are

--- a/app/views/modals/teacher/indie/_new-lesson.html.haml
+++ b/app/views/modals/teacher/indie/_new-lesson.html.haml
@@ -6,7 +6,7 @@
     .span8
       = simple_form_for :lesson, url: new_lesson_path, remote: true, defaults: { label: false } do |f|
         = f.input :uid, hint: 'YouTube URL'
-        = f.input :name, hint: 'Title' 
+        = f.input :title, hint: 'Title' 
         = f.input :description, as: :text, input_html: { rows: 5, cols: 60, class: 'span11' }, 
         hint: 'Details of what the lesson will cover'
         = simple_button for: 'Create', type: :submit, class: 'btn-primary' 
