--- a/app/views/menus/teacher/indie/_main.html.haml
+++ b/app/views/menus/teacher/indie/_main.html.haml
@@ -3,6 +3,8 @@
   %li
     = simple_link for: 'My Courses', icon: 'icon-list', id: 'a-my-courses'
   %li
+    = simple_link for: 'Lessons & Quizzes', icon: 'icon-list', id: 'a-my-assets'
+  %li
     = simple_link for: 'New Course', icon: 'icon-plus-sign', id: 'a-new-course'
   %li
     = simple_link for: 'New Lesson', icon: 'icon-plus-sign', id: 'a-new-lesson'
