Change bullet style to visually distinguish used & ununsed assets

--- a/app/assets/stylesheets/indie/assets.css.scss
+++ b/app/assets/stylesheets/indie/assets.css.scss
@@ -22,6 +22,8 @@ body.dragging, body.dragging * {
   } 
   > ul { 
     min-height: 50px ;
+    &:not([class~='serialize']){ list-style-type: circle ; }
+    &.serialize { list-style-type: square ; }
     li {
       cursor: pointer ;
       padding: {
