--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -27,12 +27,13 @@
 
 - layout = { left: [ [1, 'students/rc'],
                      [2, 'students/inbox'],
-                     [3, 'students/course_filter']],
+                     [3, 'course/view/filters']],
              middle: [],
              right: [],
              wide: [ ['wait', 'toolbox/generic/wait'],
                      ['X', nil],
-                     [1, 'students/course_list'] ] }
+                     [1, 'course/view/tiles'],
+                     [2, 'course/view/exploded'] ] }
 
 !!!5
 
