--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -62,12 +62,12 @@
   - control_panel = [ { for: 'Start here', id: 'a-cp-1' },
                       {for: "Hello, #{t.first_name}", id: 'm-account'} ]
 
-  - layout = { left: [ [1, 'course/list'],
+  - layout = { left: [ [1, 'course/edit/list'],
                        [2, 'teachers/indie/assets'],
                      ],
                middle: [],
                right: [],
-               wide: [ [1, 'course/details'],
+               wide: [ [1, 'course/edit/details'],
                        ['X', nil] ] }
 
 !!!5
