--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -45,7 +45,7 @@
 %html{html_attrs}
   %head 
     = javascript_include_tag "application", "students"
-    -#%script{ type: 'text/javascript', src: '//cdn.sublimevideo.net/js/2fya70le.js' }
+    %script{ type: 'text/javascript', src: '//cdn.sublimevideo.net/js/2fya70le.js' }
     %script{ :type => "text/x-mathjax-config" } 
       MathJax.Hub.Config({
       "HTML-CSS" : {
@@ -62,7 +62,7 @@
       }
       }
       });
-    -#= javascript_include_tag "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
+    = javascript_include_tag "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
     = stylesheet_link_tag "application" 
     = csrf_meta_tag
 
