Explicit CSS file for non-indie ( ie. uni ) teachers

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -94,7 +94,7 @@
       });
     = javascript_include_tag "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
     = javascript_include_tag "http://d3js.org/d3.v3.min.js"
-    = stylesheet_link_tag "application", (t.indie ? 'indie' : '')
+    = stylesheet_link_tag "application", (t.indie ? 'indie' : 'uni')
     = csrf_meta_tag
 
   %body 
