--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -9,11 +9,11 @@
  */
 
 $panel-colour: lighten(black, 17%) ;
-$deep-blue: #0081c2 ;
 $gradians-blue : #6ca7ab ;
 $orange : #fda500 ;
 $background: darken($panel-colour, 12%) ;
 $gray: #191919 ; // rgb(25,25,25)
+$deep-blue: #01537d ; // rgb(1,83,125)
 
 .clearfix {
   *zoom: 1;
