--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -40,7 +40,7 @@
              wide: [ ['wait', 'toolbox/generic/wait'],
                      ['X', nil],
                      [1, 'course/view/tiles'],
-                     [2, 'course/view/exploded'], 
+                     [2, 'course/view/outline'], 
                      [3, 'customers/transactions'] ] }
 
 !!!5
