Forgot to add quiz builder partials in indie layout

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -64,10 +64,12 @@
 
   - layout = { left: [ [1, 'course/edit/list'],
                        [2, 'teachers/indie/assets'],
+                       [3, 'teachers/shared/qzb'],
                      ],
                middle: [],
                right: [],
                wide: [ [1, 'course/edit/details'],
+                       ['wait', 'toolbox/generic/wait'],
                        ['X', nil] ] }
 
 !!!5
