--- a/app/views/menus/student/_per-qz.html.haml
+++ b/app/views/menus/student/_per-qz.html.haml
@@ -1,6 +1,5 @@
 
 %ul.dropdown-menu.dropdown-inverse#per-qz{ role: :menu } 
   %li
-    = simple_link for: 'Make Question Paper', icon: 'icon-cog', id: 'a-compile-quiz'
-  %li
-    = simple_link for: 'Download', icon: 'icon-download', id: 'a-download-quiz'
+    = simple_link for: 'Pay to Grade', id: 'a-pay'
+    .footnote= 'Price $5'
