--- a/app/views/modals/guest/_register.html.haml
+++ b/app/views/modals/guest/_register.html.haml
@@ -1,12 +1,19 @@
 
-- teacher = Teacher.new 
-- teacher_account = teacher.build_account
 - student = Student.new 
 
 #m-register.modal.regular.fade.row-fluid
   .span2
-    = image_tag 'notifications/add-user.png', class: 'big-icon offset1'
   .span8
+    -# Student Registration Form
+    #pane-register-2
+      %p.title.underline= "Student Registration"
+      = simple_form_for student, url: match_student_path, validate: true, remote: true, 
+      defaults: { required: false }, html: { id: 'fm-register-student' } do |f|
+        = f.input :name
+        = f.input :code, hint: "Your Teacher would have provided you this"
+        %input.hide{ type: :string, data: { validate: false }, name: 'teacher[guard]' } 
+        %button.btn.btn-large.btn-primary.push-down.pull-right{type: :submit}= "Check Name"
+  -#
     #who-are-you.row-fluid
       %p.title= "Hi! Welcome. You are a ... "
       = simple_link for: "Student", id: 'btn-register-student', class: 'btn btn-info btn-large pull-left'
@@ -24,12 +31,3 @@
         %input.hide{ type: :string, data: { validate: false }, name: 'teacher[guard]' } 
         %button.btn.btn-large.btn-primary.push-down.pull-right{type: :submit}= "Register"
 
-    -# Student Registration Form
-    #pane-register-2.hide
-      %p.title= "Student Registration"
-      = simple_form_for student, url: match_student_path, validate: true, remote: true, 
-      defaults: { required: false }, html: { id: 'fm-register-student' } do |f|
-        = f.input :name
-        = f.input :code, hint: "Your Teacher would have provided you this"
-        %input.hide{ type: :string, data: { validate: false }, name: 'teacher[guard]' } 
-        %button.btn.btn-large.btn-primary.push-down.pull-right{type: :submit}= "Check Name"
